--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -13,44 +13,45 @@
     "lint:fix": "npx eslint src --fix"
   },
   "dependencies": {
-    "@vueuse/core": "^11.3.0",
-    "axios": "^1.7.8",
+    "@vueuse/core": "^12.0.0",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.8.8",
+    "element-plus": "^2.9.1",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.2.6",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-clipboard3": "^2.0.0",
-    "vue-i18n": "^10.0.4",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.4",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
-    "@iconify-json/mdi": "^1.2.1",
+    "@eslint/js": "^9.17.0",
+    "@iconify-json/mdi": "^1.2.2",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.4",
+    "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/language-server": "^2.1.10",
-    "eslint": "^9.15.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.31.0",
-    "globals": "^15.12.0",
-    "prettier": "3.3.3",
-    "sass": "^1.81.0",
-    "typescript": "~5.6.3",
-    "unplugin-auto-import": "^0.18.5",
-    "unplugin-icons": "^0.20.1",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.11",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "prettier": "3.4.2",
+    "sass": "^1.83.0",
+    "typescript": "^5.7.2",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-icons": "^0.22.0",
+    "unplugin-vue-components": "^0.28.0",
+    "vite": "^6.0.4",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   }
