--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -2,7 +2,8 @@ version: 1.0.0
 location: local  # local / dev / prd
 node:
   hostIp: 0.0.0.0
-  port: 8080
+  sitePort: 8300
+  backendPort: 8301
 db:
   root: "../../humpback.db"
   timeout: 5s
