--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -22,6 +22,9 @@ jobs:
       working-directory: ./front
       run: |
         npm install -g pnpm
+        cd projects/web
+        pnpm install
+        cd ../../
         npm run build
 
     - name: Set up Go
