--- a/front/projects/web/tsconfig.json
+++ b/front/projects/web/tsconfig.json
@@ -20,6 +20,7 @@
     "jsx": "preserve",
     /* Linting */
     "strict": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
