add format project

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -10,8 +10,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}\\main.go",
-      "env": {
-      },
+      "env": {},
       "args": []
     }
   ]
