--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,30 @@
 # Logs
-logs
+**/logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
+**/lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+**/node_modules/
+**/dist/
+**/dist-ssr/
+**/*.local
 
 # Editor directories and files
 **/.vscode/**
 !.vscode/extensions.json
 **/.idea/**
-.DS_Store
+**/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-package-lock.json
-pnpm-lock.yaml
+*.db
+**/package-lock.json
+**/pnpm-lock.yaml
 *.exe
-humpback_linux
-humpback
+**/humpback_linux
+**/humpback
