completed login func

--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -10,6 +10,7 @@ node:
 db:
   root: './humpback.db'
   timeout: 5s
+  sessionTimeout: 12h
 html:
   dir: '../front/projects/web/dist'
   load: false
