add user profile page

--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -11,10 +11,10 @@ db:
   root: './humpback.db'
   timeout: 5s
   sessionTimeout: 12h
+  sessionGCInterval: 24h
 html:
   dir: '../front/projects/web/dist'
   load: false
 admin:
-  id: 00000000000000000000000000000000
-  name: humpback   # 长度2-100
+  username: humpback   # 长度2-100
   password: humpback # 长度8-20
