--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -13,12 +13,12 @@
     "lint:fix": "npx eslint src --fix"
   },
   "dependencies": {
-    "@vueuse/core": "^12.0.0",
+    "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.9.1",
+    "element-plus": "^2.9.3",
     "jsencrypt": "^3.3.2",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
@@ -27,18 +27,18 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
+    "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.18.0",
     "@iconify-json/mdi": "^1.2.2",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.10.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.10.5",
     "@types/nprogress": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/language-server": "^2.2.0",
-    "eslint": "^9.17.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
@@ -46,13 +46,13 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
-    "sass": "^1.83.0",
-    "typescript": "^5.7.2",
+    "sass": "^1.83.1",
+    "typescript": "^5.7.3",
     "unplugin-auto-import": "^0.19.0",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-icons": "^0.22.0",
     "unplugin-vue-components": "^0.28.0",
-    "unplugin-element-plus": "^0.8.0",
-    "vite": "^6.0.5",
+    "vite": "^6.0.7",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.2.0"
   }
