--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.9.3",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.52.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
