--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -22,6 +22,7 @@
     "monaco-editor": "^0.52.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
+    "screenfull": "^6.0.2",
     "vue": "^3.5.13",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^10.0.5",
