--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -17,16 +17,19 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.3",
+    "ini": "^5.0.0",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.2",
+    "monaco-yaml": "^5.2.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "screenfull": "^6.0.2",
     "vue": "^3.5.13",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^10.0.5",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xml-formatter": "^3.6.4"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
