--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -11,7 +11,8 @@
       "mode": "auto",
       "program": "${workspaceFolder}\\main.go",
       "env": {},
-      "args": []
+      "args": [],
+      "dlvFlags": ["--check-go-version=false"]
     }
   ]
 }
