--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -13,8 +13,11 @@
     "lint:fix": "npx eslint src --fix"
   },
   "dependencies": {
+    "@vue-js-cron/element-plus": "^3.1.6",
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
+    "cron-validator": "^1.3.1",
+    "cronstrue": "^2.55.0",
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.3",
     "ini": "^5.0.0",
