--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -2,6 +2,8 @@ name: Build and Deploy
 
 on:
   push:
+    tags:
+      - 'v*'
     branches:
       - develop
 
@@ -28,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: '1.24'
       
       - name: Install dependencies and build backend
         working-directory: ./backend
@@ -36,12 +38,23 @@ jobs:
           go mod download
           CGO_ENABLED=0 go build -o humpback
       
-      - name: 'Build and push image'
-        uses: azure/docker-login@v1
+      - name: Login Docker Hub
+        uses: docker/login-action@v3
         with:
-          login-server: jamesyyangapp.azurecr.io
-          username: jamesyyangapp
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-      - run: |
-          docker build . -t jamesyyangapp.azurecr.io/humpback-server:${{ github.sha }}
-          docker push jamesyyangapp.azurecr.io/humpback-server:${{ github.sha }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: humpbacks/humpback-server
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
