--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -14,54 +14,54 @@
   },
   "dependencies": {
     "@vue-js-cron/element-plus": "^3.1.6",
-    "@vueuse/core": "^12.4.0",
-    "axios": "^1.7.9",
+    "@vueuse/core": "^12.8.2",
+    "axios": "^1.8.2",
     "cron-validator": "^1.3.1",
-    "cronstrue": "^2.55.0",
+    "cronstrue": "^2.56.0",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.9.3",
+    "element-plus": "^2.9.5",
     "ini": "^5.0.0",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.2",
-    "monaco-yaml": "^5.2.3",
+    "monaco-yaml": "^5.3.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.3.0",
+    "pinia": "^3.0.1",
     "screenfull": "^6.0.2",
     "vue": "^3.5.13",
     "vue-clipboard3": "^2.0.0",
-    "vue-i18n": "^10.0.5",
+    "vue-i18n": "^11.1.2",
     "vue-router": "^4.5.0",
     "xml-formatter": "^3.6.4"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@iconify-json/mdi": "^1.2.2",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.21.0",
+    "@iconify-json/mdi": "^1.2.3",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.13.9",
     "@types/nprogress": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/language-server": "^2.2.0",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@vue/language-server": "^2.2.8",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.0",
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "globals": "^15.14.0",
-    "prettier": "3.4.2",
-    "sass": "^1.83.1",
-    "typescript": "^5.7.3",
-    "unplugin-auto-import": "^0.19.0",
-    "unplugin-element-plus": "^0.8.0",
-    "unplugin-icons": "^0.22.0",
-    "unplugin-vue-components": "^0.28.0",
-    "vite": "^6.0.7",
-    "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.2.0"
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
+    "prettier": "3.5.3",
+    "sass": "^1.85.1",
+    "typescript": "5.5.3",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-element-plus": "^0.9.1",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.1",
+    "vue-eslint-parser": "^10.1.1",
+    "vue-tsc": "^2.2.8"
   }
 }
