--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -19,6 +19,7 @@
     "cron-validator": "^1.3.1",
     "cronstrue": "^2.56.0",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.5",
     "ini": "^5.0.0",
     "jsencrypt": "^3.3.2",
