--- a/front/projects/web/package.json
+++ b/front/projects/web/package.json
@@ -33,6 +33,7 @@
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^11.1.2",
     "vue-router": "^4.5.0",
+    "vue-virtual-scroller": "2.0.0-beta.8",
     "xml-formatter": "^3.6.4"
   },
   "devDependencies": {
