--- a/backend/config/config_dev.yaml
+++ b/backend/config/config_dev.yaml
@@ -1,4 +1,9 @@
 location: dev # local / dev / prd
 html:
-  dir: './html/web'
+  dir: './web'
   load: true
+db:
+  root: '/workspace/data/humpback.db'
+  timeout: 5s
+  sessionTimeout: 12h
+  sessionGCInterval: 24h
