--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -13,6 +13,7 @@ db:
   timeout: 5s
   sessionTimeout: 12h
   sessionGCInterval: 24h
+  activityGCInterval: 24h
 html:
   dir: '../front/projects/web/dist'
   load: false
