--- a/backend/config/config_prd.yaml
+++ b/backend/config/config_prd.yaml
@@ -7,3 +7,7 @@ db:
   timeout: 5s
   sessionTimeout: 12h
   sessionGCInterval: 24h
+  activityGCInterval: 24h
+  activityRetentionDay: 120  #单位：天
+  statisticsGCInterval: 24h
+  statisticsRetentionDay: 32 #单位：天
