improve github action

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -3,9 +3,9 @@ name: Build and Deploy
 on:
   push:
     tags:
-      - 'v*'
+      - '*'
     branches:
-      - develop
+      - main
 
 jobs:
   build:
@@ -50,7 +50,8 @@ jobs:
         with:
           images: humpbacks/humpback-server
           tags: |
-            type=raw,value=develop
+            type=ref,event=tag
+            type=raw,value=latest
       
       - name: Build and push
         uses: docker/build-push-action@v6
